# drone

./: .gitignore  LICENSE  README.md  drone_test.sh  drone_test2.sh  generated_plan.plan  generated_plan2.plan  mission_generator.py  mission_requirements.md  setup_ubuntu.sh  start_drone_node.sh  start_ground_node.sh
computer_vision/: .gitignore  README.md  generate.py  model_training.py
computer_vision/Models/Airplane/: scene.gltf
computer_vision/Models/Airplane2/: scene.gltf
computer_vision/Models/Baseball/: license.txt  scene.gltf
computer_vision/Models/Boat/: license.txt  scene.gltf
computer_vision/Models/Bus/: scene.gltf
computer_vision/Models/Ground/: scene.gltf
computer_vision/Models/Mattress/: scene.gltf
computer_vision/Models/Skis/: scene.gltf
computer_vision/Models/Snowboard/: scene.gltf
computer_vision/Models/Soccer/: scene.gltf
computer_vision/Models/Suitcase/: license.txt
computer_vision/helpers/: setup_helpers.py
dataset_generator/: generate.py
dataset_generator/Models/Airplane/: license.txt
dataset_generator/Models/Car/: scene.gltf
dataset_generator/Models/Mannequin/: scene.gltf
dataset_generator/Models/Mattress/: license.txt
dataset_generator/Models/Motorcycle/: license.txt  scene.gltf
dataset_generator/Models/Stop/: scene.gltf
dataset_generator/Models/Suitcase/: scene.gltf
dataset_generator/Models/Tennis/: scene.gltf
dataset_generator/Models/Umbrella/: license.txt  scene.gltf
dataset_generator/helpers/: setup_helpers.py
drone_ws/: README.md  simple_tree.bt
drone_ws/src/camera/: package.xml  setup.py
drone_ws/src/camera/camera/: camera_streamer.py  camera_subscriber.py
drone_ws/src/custom_msgs/: CMakeLists.txt  package.xml
drone_ws/src/custom_msgs/msg/: Action.msg  DroneState.msg  LocalPosVel.msg
drone_ws/src/mapping_and_planning/: CMakeLists.txt  README.md  package.xml
drone_ws/src/mapping_and_planning/include/mapping_and_planning/: mapping.hpp
drone_ws/src/mapping_and_planning/msg/: Obstacle.msg  ObstacleArray.msg
drone_ws/src/mapping_and_planning/src/: mapping.cpp
drone_ws/src/planner/: package.xml  setup.py
drone_ws/src/planner/planner/: path_planner.py
drone_ws/src/px4_controller/: CMakeLists.txt  README.md  package.xml
drone_ws/src/px4_controller/src/: drone_node.cpp
mission_setup_script/: comp_immutables_runway_1.json  comp_immutables_runway_2.json  comp_mutables.json  mission_generator.py
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml  results.csv
runs/detect/train5/: args.yaml  results.csv
setup_scripts/: config  setup_tools.sh  setup_ubuntu.sh
